[package]
name = "mlua-userdata-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mlua/lua54", "mlua/vendored"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
luau = ["mlua/luau"]

[dependencies]
mlua = { version = "*", features = ["serialize"] }
serde_json = "1"
